srml/support/test/tests/construct_runtime_ui/missing_where_param.stderr
error: expected one of: `Block`, `NodeBlock`, `UncheckedExtrinsic`
 --> $DIR/missing_where_param.rs:7:2
  |
7 |     {}
  |     ^^
